# py_api_plate

./: Dockerfile  Makefile  README.md  pyproject.toml  stack.yml
src/: main.py  test_main.py
