[project]
name = "py-api-plate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.5",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
quote-style = "single"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]
